		Added support for rectangular cells with forced perspective.
		Added initial support for Tmp(TS) sprites.
		Added GainsUnitUpgrades trait for leveling specific unit upgrades - firepower, armor, speed.
		Added support for crates to level up specific unit upgrades.
		Added a new Launch.Replay=$FILEPATH parameter for OpenRA.Game.exe to instantly start watching a *.rep file.
	Asset Browser:
		Filenames are now listed in alphabetical order
	Map Editor:
		Removed legacy INI/MPR map import.
	Utility:
		Added an improved INI/MPR map import.
	Mod / Custom map compatibility:
		Altitude is no longer parsed from actor templates in maps. Specify CenterPosition instead.
		Run `OpenRA.Utility.exe --upgrade-mod <mod> 20131223` to automatically upgrade mod rules.
		Run `OpenRA.Utility.exe --upgrade-map <map path> 20131223` to automatically upgrade custom map rules.
		Added a new trait Demolishable for buildings to handle the C4 demolition.
		Mods that use custom TileSize must specify both width and height.
		If you spot black tiles in your Dune 2000 ARRAKIS maps, replace them with the remaining sand and rock tiles. Go to Map → Fix Open Areas to randomize them.

20131223:
	All mods:
		Fixed dead units sometimes exploding or leaving husks when they weren't in the world.
		Added hover and disabled button states [RA / D2K / TS]
		Added double click start support to the replay browser.
		Fixed low projectiles not colliding with walls.
		Fixed double-click selection priority glitches.
		Improved UI decorations (selection boxes, target lines, etc) in pixel double mode.
		Added additional stand animations to infantry [RA / TD]
		Added the ability to double click select maps and music.
		Fixed base attack notification playing when allied engineers repaired your buildings.
		Improved the ingame chat interface and input, with it defaulting to Team Chat.
		Redesigned the settings panel.
		Re-added move flashes.