@@ -17,6 +17,8 @@ NEW:
 		Added GainsUnitUpgrades trait for leveling specific unit upgrades - firepower, armor, speed.
 		Added support for crates to level up specific unit upgrades.
 		Added a new Launch.Replay=$FILEPATH parameter for OpenRA.Game.exe to instantly start watching a *.rep file.
+	Server:
+		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
 	Asset Browser:
 		Filenames are now listed in alphabetical order
 	Map Editor:
